subprojects/oauth-proxy_scale_test/exec/nginx.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: oauth-proxy-example
    template: oauth-proxy-example
  name: nginx-route
  namespace: oauth-proxy
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: nginx
    weight: 100
